[package]
name = "unnamed"
version = "0.1.0"
edition = "2021"
publish = false

authors.workspace = true
readme.workspace = true
license.workspace = true

[workspace.package]
authors = ["Nils Mathieu <contact@nils-mathieu.fr>"]
readme = "README.md"
license = "Apache-2.0"


[workspace]
members = [
    "crates/starknet-prove-core",
    "crates/starknet-prove-stone",
    "crates/starknet-dal-core",
]

[workspace.lints.rust]
unsafe-op-in-unsafe-fn = "forbid"

[features]
default = ["prover-stone"]

# Enable using the Stone prover as the backend for proof generation.
prover-stone = ["dep:starknet-prove-stone"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", default-features = false, features = ["http2"] }
serde_json = "1"
serde = { version = "1", features = ["std"] }

starknet-prove-core = { path = "crates/starknet-prove-core" }
starknet-prove-stone = { path = "crates/starknet-prove-stone", optional = true }
