[package]
name = "starknet-prove-stone"
version = "0.1.0"
edition = "2021"

authors.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
starknet-prove-core = { path = "../starknet-prove-core" }
starknet-types-core = { version = "0.0.9", default-features = false, features = [
    "serde",
] }

thiserror = "1"
tokio = { version = "1", default-features = false, features = [
    "process",
    "io-util",
    "fs",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
